Asserts working basically

--- a/project_mock.json
+++ b/project_mock.json
@@ -18,7 +18,7 @@
 					"Expected_response_body": "{\"message\": \"GET called\"}",
 					"Expected_response_status": "200 OK",
 					"Api_endpoint": "/base",
-					"Headers": {
+					"Request_Headers": {
 						"Content_type": "application/json; charset=UTF-8"
 					},
 					"Comment": "comment_1"
@@ -30,7 +30,7 @@
 					"Expected_response_body": "{\"message\": \"POST called\"}",
 					"Expected_response_status": "201 Created",
 					"Api_endpoint": "/base",
-					"Headers": {
+					"Request_Headers": {
 						"Content_type": "application/json; charset=UTF-8"
 					},
 					"Comment": "comment_2"
@@ -42,7 +42,7 @@
 					"Expected_response_body": "{\"message\": \"PUT called\"}",
 					"Expected_response_status": "202 Accepted",
 					"Api_endpoint": "/base",
-					"Headers": {
+					"Request_Headers": {
 						"Content_type": "application/json; charset=UTF-8"
 					},
 					"Comment": "comment_3"
@@ -54,7 +54,7 @@
 					"Expected_response_body": "{\"message\": \"DELETE called\"}",
 					"Expected_response_status": "200 OK",
 					"Api_endpoint": "/base",
-					"Headers": {
+					"Request_Headers": {
 						"Content_type": "application/json; charset=UTF-8"
 					},
 					"Comment": "comment_4"
@@ -66,7 +66,7 @@
 					"Expected_response_body": "Bro, use real HTTP methods, who tf uses PATCH or OPTIONS, be forreal",
 					"Expected_response_status": "404 Not Found",
 					"Api_endpoint": "/base",
-					"Headers": {
+					"Request_Headers": {
 						"Content_type": "application/json; charset=UTF-8"
 					},
 					"Comment": "comment_5"
